--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,8 @@
 }
 
 body {
-  font-family: "Lucida Sans Unicode", "Lucida Grande", Arial, sans-serif;
+  font: 14px "Lucida Sans Unicode", "Lucida Grande", Arial, sans-serif;
+  letter-spacing: -1px;
 }
 
 .wrap {
@@ -19,25 +20,20 @@ body {
   width: 908px;
 }
 
-header {
-  margin-top: 15px;
-}
-
 header adress {
   position: relative;
   display: inline-block;
-  margin: 3px 0 0 30px;
-  color: #777;
-  vertical-align: middle;
+  margin: 15px 0 0 28px;
   font-size: 18px;
   letter-spacing: -1px;
+  color: #777;
 }
 
 header adress:before {
   content: '';
   position: absolute;
   top: 2px;
-  left: -24px;
+  left: -22px;
   width: 21px;
   height: 21px;
   vertical-align: middle;
@@ -48,16 +44,18 @@ header adress:before {
 header form {
   position: relative;
   display: inline-block;
-  margin: -5px 0px 0 9px;
+  margin: -12px 0px 0 12px;
   padding: 1px 0px 0 25px;
   width: 496px;
-  height: 25px;
-  border-radius: 3px;
+  height: 27px;
+  border-top: 1px solid #a6c3cf;
+  border-left: 1px solid #dce7ec;
+  border-radius: 4px;
   background: linear-gradient(to top, #0d3458, #1f6787);
-  box-shadow: 0px 3px 3px 0px rgba(150, 150, 150, 0.75);
-  color: #fff;
+  box-shadow: 1px 3px 4px rgb(185, 185, 185);
   font-size: 12px;
   vertical-align: middle;
+  color: #fff;
 }
 
 header form:before {
@@ -66,101 +64,152 @@ header form:before {
   top: 5px;
   left: 1px;
   width: 20px;
-  height: 20px;
-  vertical-align: middle;
-  background: #175272 url('../img/sprites.png') -50px 0px no-repeat;
+  height: 17px;
+  background: url('../img/sprites.png') -50px 0px no-repeat;
 }
 
 header form input {
   font-size: 12px;
-  height: 16px;
+  height: 17px;
 }
 
 header form .text {
-  margin: 3px 0px 0 1px;
+  margin: 3px 3px 0 0px;
+  padding-left: 3px;
   width: 114px;
-  padding-left: 2px;
+  border: 1px solid #9ba1a3;
+  border-radius: 2px;
+  box-shadow: inset 0 1px 2px #dee0e0;
+}
+
+header form .text:focus {
+  outline: none;
 }
 
 header form .login-button {
+  margin: 0px 2px;
   border: 0;
   background: transparent;
+  font-size: 12px;
+  letter-spacing: 0px;
+  text-decoration: none;
   color: #fff;
 }
 
 header form a {
-  margin: 0 0 0 5px;
-  color:#bfbfbf;
+  margin-left: 4px;
+  border-bottom: 1px solid;
+  letter-spacing: 0px;
+  text-decoration: none;
+  color: #bfbfbf;
+}
+
+header form .login-button:hover,
+header form a:hover {
+  color: black;
 }
 
 header .navig-wrap {
-  display: inline-block;
+  position: absolute;
+  top: 13px;
+  right: 225px;
 }
 
 header .navig {
-  margin: 2px 0 0 11px;
-  width: 77px;
+  width: 78px;
   height: 22px;
-  list-style: none;
-  border: 1px solid rgb(189, 196, 199);
-  border-radius: 30px;
+  border: 1px solid #b1bcc0;
+  border-radius: 10px;
+  box-shadow: 0 0 5px #b1bcc0;
   text-align: center;
 }
 
 header .navig li {
-  position: relative;
   display: inline-block;
-  width: 16px;
-}
-
-header .navig img {
-  position: absolute;
-  top: -15px;
-  left: 0;
+  padding: 0 3px;
 }
 
 header .banner img {
-  margin-top: 5px;
   display: block;
+  margin: 6px 0;
 }
 
-.global-menu-wrap {
+header .global-menu-wrap {
+  position: relative;
   display: block;
-  background: linear-gradient(to top, #000, #4d5663);
+  height: 32px;
+  box-shadow: 3px 3px 5px #333;
+  border-radius: 4px;
+  background: url(../img/bg-global-menu.jpg) repeat-x;
 }
 
-.global-menu {
-  padding-left: 50px;
-  height: 35px;
+.global-menu-wrap li {
+  float: left;
   list-style: none;
 }
 
-.global-menu li {
-  display: inline-block;
-  margin: 2px 5px;
-  padding: 2px 10px;
-  border: 1px solid transparent;
-  border-radius: 20px;
-}
-
-.global-menu li:hover {
-  background: linear-gradient(to top, #0d3458, #1f6787);
+.global-menu {
+  padding-left: 131px;
 }
 
 .global-menu a {
+  display: inline-block;
+  margin: 4px 0;
+  padding: 2px 14px;
+  height: 26px;
+  border: 1px solid transparent;
+  border-radius: 20px;
+  font-size: 15px;
   text-decoration: none;
+  color: #b1bcc0;
+}
+
+.global-menu a:hover {
+  border-bottom: 1px solid #09233b;
+  border-top: 1px solid #25617b;
+  border-radius: 16px;
+  background: linear-gradient(to top, #0d3458, #1f6787);
   color: #fff;
-  font-size: 14px;
+}
+
+.card-block {
+  position: absolute;
+  right: 15px;
+  list-style: none;
+  font: 11px Arial, sans-serif;
+  line-height: 32px;
+  letter-spacing: 1px;
+  color: #fff;
+}
+
+.card-block:before {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 7px;
+  left: -15px;
+  width: 21px;
+  height: 17px;
+  background: url(../img/cart.png) no-repeat;
+}
+
+.card-block li {
+  margin: 0 0 0 10px;
+}
+
+.card-block span {
+  color: #1F83C8;
 }
 
 main {
   position: relative;
-  margin: 160px 0;
+  margin: 168px 0 0;
 }
 
 main aside .title {
   position: relative;
   font-size: 14px;
+  font-weight: normal;
 }
 
 main aside .title:before,
@@ -170,9 +219,8 @@ main aside .title + ul > li span:before {
   margin-right: 5px;
   width: 20px;
   height: 20px;
-  background: #124367 url(../img/sprites.png) no-repeat -173px 2px;
-  //border: 1px solid #999;
   border-radius: 50%;
+  background: #124367 url(../img/sprites.png) no-repeat -173px 2px;
   vertical-align: top;
 }
 
@@ -187,21 +235,21 @@ main aside .title:after {
   left: -4px;
   padding: 2px 0 0 3px;
   height: 22px;
-  border: 1px solid;
+  border: 1px solid #AFB6BC;
   border-radius: 15px;
 }
 
 .title-of-catalog:after {
-  width: 210px;
-}
-
-.title-of-brands:after {
-  width: 150px;
+  width: 180px;
 }
 
 main aside ul {
-  margin-top: 40px;
+  margin-top: 33px;
   list-style: none;
+}
+
+main aside .title + ul {
+  margin-top: 45px;
 }
 
 main aside .title + ul > li {
@@ -213,120 +261,183 @@ main aside .title + ul > li span {
   position: absolute;
   top: -30px;
   padding: 2px 0 0 3px;
-  height: 22px;
-  width: 120px;
-  border: 1px solid;
+  height: 26px;
+  width: 150px;
+  border: 1px solid #AFB6BC;
   border-radius: 15px;
 }
 
 .wrap-catalog {
   float: left;
-  width: 24%;
-  border: 1px solid;
+  margin-top: 2px;
+  width: 183px;
+}
+
+.catalog ul {
+  list-style-type: circle;
 }
 
 .catalog ul > li {
-  display: block;
-  min-height: 25px;
-  margin-left: 30px;
-  list-style-type: disc;
+  height: 24px;
+  margin-left: 55px;
 }
 
 .catalog ul > li a {
-  margin: 5px;
+  margin: 0 0 0 -8px;
+  font-size: 14px;
   text-decoration: none;
   color: #465961;
 }
 
 .catalog ul > li a:hover {
-  text-decoration: underline;
+  font-size: 14px;
   font-style: italic;
   font-weight: bold;
-  font-size: 14px;
+  text-decoration: underline;
   color: #0c3256;
 }
 
 .content {
   float: left;
-  margin-bottom: 50px;
-  width: 60%;
+  margin: -5px 0 37px 7px;
+  padding: 0 0 20px 22px;
+  width: 526px;
   background: linear-gradient(to top, #93a7b0, #e4e7e8);
 }
 
 .content figure {
   display: inline-block;
-  margin: 10px 15px;
+  margin: 12px 27px 6px 0;
   text-align: center;
 }
 
 .content figcaption span {
   display: block;
+  letter-spacing: 0px;
 }
 
 .content .company {
+  font-size: 15px;
+  font-weight: bold;
   color: #2e6f8c;
-  font-size: 18px;
+}
+
+.content .model {
+  margin-top: -8px;
+  font-size: 13px;
+  color: #000;;
 }
 
 .content figure img {
   display: block;
+  margin-top: -3px;
   border: 1px solid #999;
   border-radius: 10px;
 }
 
 .content .price {
+  display: inline-block;
+  margin: 4px 0 0 10px;
+  font: bold italic 16px Arial;
+  letter-spacing: 0px;
   color: #114165;
-  font-family: Arial;
-  font-weight: bold;
 }
 
-.content .price span {
-  font-style: italic;
+.content .price .currency {
+  font-size: 14px;
 }
 
 .wrap-brands {
   float: right;
-  width: 15%;
-  border: 1px solid;
+  padding-left: 5px;
+  width: 183px;
+}
+
+.title-of-brands:after {
+  width: 177px;
+}
+
+.wrap-brands .brands {
+  margin-left: 10px;
+}
+
+.wrap-brands .brands ul {
+  margin-left: 10px;
+}
+
+.wrap-brands .brands li span {
+  width: 137px;
+  height: 28px;
+}
+
+.wrap-brands .brands label {
+  margin-left: 8px;;
+  font-size: 13px;
 }
 
 .wrap-brands input {
   display: inline-block;
+  margin: 5px 0 9px;
+}
+
+.wrap-brands .btn {
+  margin: 13px 0 0 20px;
+  padding: 5px 11px;
+  border: none;
+  border-radius: 10px;
+  background: linear-gradient(rgb(31, 103, 135), rgb(12, 51, 87));
+  box-shadow: 1px 2px 6px #bec0c1;
+  font-size: 12px;
+  color: #e5e9ea;
+  cursor: pointer;
 }
 
 main .brand-logos {
+  margin: 0 0 19px 0;
   text-align: center;
 }
 
 footer {
   height: 100px;
+  border-top: #242c3e;
+  border-left: #242c3e;
+  border-radius: 2px;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
   background: #213a4d;
   text-align: center;
 }
 
 footer ul {
-  padding-top: 20px;
+  padding-top: 7px;
   text-align: center;
 }
 
 footer li {
-  display: inline-block;
-  padding: 0 10px;
-  line-height: 14px;
-  text-align: center;
-  vertical-align: top;
+  display: inline;
   color: white;
 }
 
-footer li:not(.none) {
-  border-left: 1px solid;
+footer li:not(.first_li):before {
+  content: '| ';
+  font-size: 12px;
 }
 
 footer li a {
-  color: white;
+  padding: 0px 9px 0 6px;
+  font-size: 12px;
   text-decoration: none;
+  letter-spacing: 0px;
+  color: white;
 }
 
-footer p {
+footer a:hover {
+  color: #52abcb;
+}
+
+footer .copyright {
+  margin-top: 10px;
+  font-size: 10px;
+  letter-spacing: 0px;
   color: #7f4740;
 }
